--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "flowbite": "^2.3.0",
+    "papaparse": "^5.4.1",
     "primevue": "^3.49.1",
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "vue-papa-parse": "^3.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
