--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "firebase": "^10.12.5",
     "flowbite": "^2.3.0",
     "papaparse": "^5.4.1",
     "primevue": "4.0.0",
