--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
     "flowbite": "^2.3.0",
     "papaparse": "^5.4.1",
