--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
     "flowbite": "^2.3.0",
     "papaparse": "^5.4.1",
+    "primeicons": "^7.0.0",
     "primevue": "4.0.0",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0",
