--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.4",
+    "@supabase/supabase-js": "^2.48.0",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
